--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
