--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "highlight.js": "^11.11.1",
+    "hotkeys-js": "^3.13.15",
     "markdown-it": "^14.1.0",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18"
