--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "hotkeys-js": "^3.13.15",
     "markdown-it": "^14.1.0",
     "tailwindcss": "^4.1.13",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
